relay/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: relay
    app.kubernetes.io/name: relay
    app.kubernetes.io/component: sync-coordinator
    app.kubernetes.io/part-of: myshare
  name: relay
  namespace: myshare-dev
spec:
  ports:
    - name: http
      port: 8787
      protocol: TCP
      targetPort: http
  selector:
    app: relay
  type: ClusterIP
